# tree-sitter-abl

./: .gitattributes  .gitignore  .npmignore  .oxfmtrc.jsonc  .prettierrc  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  prepublish.js  pyproject.toml  setup.py  skills-lock.json  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  test.yml
bindings/c/: tree-sitter-abl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
docs/: abl-contents.txt
grammar/: core.js  definitions.js  expressions.js  extras.js  statements.js
grammar/core/: accessors.js  common.js  definitions.js  expressions.js  extras.js  operators.js  phrases.js  statements.js
grammar/definitions/: browse.js  button.js  class.js  event.js  frame.js  function.js  image.js  index.js  interface.js  menu.js  parameter.js  procedure.js  query.js  stream.js  temp-table.js  variable.js
grammar/expressions/: accum.js  aggregate.js  ambiguous.js  available.js  can-find.js  conditional.js  current-changed.js  dataset.js  entered.js  menu.js  (+10 more)
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
tools/: audit_naming.js  audit_node_types.js  audit_sharing.js  benchmark.js  benchmark.p  check.js  check_statements.js  extract_keywords.py  extract_source.js  generate.js  generate_benchmark_corpus.js  minify.js  parse.js  parse_file.js  realworld.js  reference.js  test.js
(+445 files in other folders)
